# proyecto-almac-n

./: Dockerfile  PRUEBAS_ACCESO.md  cookies.txt  docker-compose.yaml  pyproject.toml  test_permisos.py
proyecto_django/: db.sqlite3  manage.py  requirements.txt
proyecto_django/applications/historial/: admin.py  apps.py  models.py  urls.py  views.py
proyecto_django/applications/prendas/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
proyecto_django/applications/usuarios/: admin.py  apps.py  decorators.py  forms.py  models.py  urls.py  views.py
proyecto_django/media/prendas/: Chaqueta_blanca.jfif
proyecto_django/proyecto_django/: asgi.py  urls.py  views.py  wsgi.py
proyecto_django/proyecto_django/settings/: base.py  local.py  prod.py
proyecto_django/static/css/: 404.css  crear.css  eliminar.css  historial_clientes.css  listar.css  listar_como_usuario.css  login.css  menu_usuarios.css  mostrar.css  registro.css  verificar.css
proyecto_django/templates/: 404.html
proyecto_django/templates/historial/: historial_admin.html  historial_clientes.html  historial_usuario.html  historial_usuario_admin.html
proyecto_django/templates/prendas/: carrito.html  compra_exitosa.html  confirmar_compra.html  crear.html  detalle.html  detalle_admin.html  editar.html  eliminar.html  listar.html  listar_como_usuario.html
proyecto_django/templates/usuarios/: acceso_denegado.html  activar_2fa.html  detalle_usuario.html  editar_usuario.html  gestion_usuarios.html  header.html  login.html  menu.html  menu_admin.html  mostrar_qr.html  (+4 more)
requirements/: local - copia.txt
(+8 files in other folders)
